<resources>
    <string name="app_name">QCard</string>

    <!-- Strings related to login -->
    <string name="prompt_display_name">Display name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Register</string>
    <string name="action_login">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="title_forgot_password">Forgot password?</string>
    <string name="title_sign_up">Register account</string>
    <string name="title_login">Log in</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset password</string>
    <string name="btn_registered">Already registered? Login here!</string>
    <string name="btn_register">Not a member? Register here!</string>
    <string name="btn_back">Back</string>
    <string name="error_invalid_display_name">Display name must be between 3 and 16 characters long</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password must be at least 8 characters</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

</resources>
